--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Jinja2==2.10.1
 lazy-object-proxy==1.4.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2==2.8.5
 pycryptodome==3.3.1
 pylint==2.3.1
 python-jose-cryptodome==1.3.2
