--- a/requirements/requirements-prod.txt
+++ b/requirements/requirements-prod.txt
@@ -3,6 +3,7 @@ Click==7.0
 ecdsa==0.13.2
 Flask==1.0.2
 Flask-Cors==3.0.8
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.0
 future==0.17.1
 gunicorn==20.0.4
