--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
     - pip install -r requirements-dev.txt
 before_script:
-    - echo "$HEROKU_API_KEY"
+    - echo $HEROKU_API_KEY
 script:
     - pytest
 deploy:
